<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.transaction.SuccessTransactionActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/ThemeOverlay.AppCompat.Light">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:layout_scrollFlags="enterAlways|snap"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light">
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorWhite">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="center"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/txtProduk"
                        style="@style/viewParent"
                        android:layout_marginTop="@dimen/margin10"
                        android:text="@string/success_pay"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorBlack" />

                    <TextView
                        style="@style/viewParent"
                        android:layout_marginTop="@dimen/margin10"
                        android:text="@string/invoice"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <TextView
                        android:id="@+id/txtOrderID"
                        style="@style/viewParent"
                        android:layout_marginTop="@dimen/margin10"
                        android:text="OD 3457778"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />


                    <TextView
                        style="@style/viewParent"
                        android:layout_marginTop="@dimen/margin10"
                        android:text="@string/grand_total"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <TextView
                        android:id="@+id/txtGrant"
                        style="@style/viewParent"
                        android:layout_marginTop="@dimen/margin10"
                        android:text="Rp. 15.500"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorPrimaryDark"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/viewParent"
                        android:layout_marginTop="@dimen/margin10"
                        android:text="@string/pay"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <TextView
                        android:id="@+id/txtBayar"
                        style="@style/viewParent"
                        android:layout_marginTop="@dimen/margin10"
                        android:text="20.000"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />

                    <TextView
                        style="@style/viewParent"
                        android:layout_marginTop="@dimen/margin10"
                        android:text="@string/change"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <TextView
                        android:id="@+id/txtKembali"
                        style="@style/viewParent"
                        android:layout_marginTop="@dimen/margin10"
                        android:text="4.500"
                        android:textAppearance="@style/TextAppearance.AppCompat.Medium"
                        android:textColor="@color/colorBlack"
                        android:textStyle="bold" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginTop="@dimen/margin10"
                        android:background="@color/colorGrey"></View>

                    <TextView
                        style="@style/viewParent"
                        android:layout_marginTop="@dimen/margin10"
                        android:text="@string/note"
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />

                    <TextView
                        style="@style/viewParent"
                        android:layout_marginTop="@dimen/margin10"
                        android:text=""
                        android:textAppearance="@style/TextAppearance.AppCompat.Small" />



                </LinearLayout>
        </ScrollView>
        <LinearLayout
            android:layout_alignParentBottom="true"
            android:layout_marginTop="@dimen/margin5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <Button
                android:id="@+id/buttonKeluar"
                style="@style/buttonWhite"
                android:layout_marginRight="2dp"
                android:layout_width="100dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/exit"/>
            <Button
                android:layout_marginRight="2dp"
                android:id="@+id/buttonPrint"
                style="@style/loginButton"
                android:layout_width="120dp"
                android:layout_gravity="center_horizontal"
                android:drawableLeft="@drawable/ic_print_white"
                android:text="@string/print"/>
            <Button
                android:id="@+id/buttonNewTransaction"
                style="@style/orangeButton"
                android:layout_width="120dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/new_transaction"/>
        </LinearLayout>
    </RelativeLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>